Avoid saveResource warnings on startup